--- a/index.html
+++ b/index.html
@@ -14,10 +14,67 @@
     </head>
     <body class="container-fluid">
       <h1>API Token Auth</h1>
+
       <form id="sign-up">
         <fieldset>
           <legend>Sign up!</legend>
+          <label class="email">
+            Email
+            <input type="text" name="credentials[email]">
+          </label>
+
+          <label class="password">
+            Password
+            <input type="password" name="credentials[password]">
+          </label>
+
+          <label class="password_confirmation">
+            Password Confirmation
+            <input type="password" name="credentials[password_confirmation]">
+          </label>
+
           <input type="submit" name="submit" value="Sign up!">
+        </fieldset>
+      </form>
+
+      <form id="sign-in">
+        <fieldset>
+          <legend>Sign in!</legend>
+          <label class="email">
+            Email
+            <input type="text" name="credentials[email]">
+          </label>
+
+          <label class="password">
+            Password
+            <input type="password" name="credentials[password]">
+          </label>
+
+          <input type="submit" name="submit" value="Sign in!">
+        </fieldset>
+      </form>
+
+      <form id="change-password">
+        <fieldset>
+          <legend>Change Password!</legend>
+          <label class="old">
+            Old password
+            <input type="password" name="passwords[old]">
+          </label>
+
+          <label class="new">
+            New password
+            <input type="password" name="passwords[new]">
+          </label>
+
+          <input type="submit" name="submit" value="Change password!">
+        </fieldset>
+      </form>
+
+      <form id="sign-out">
+        <fieldset>
+          <legend>Sign Out!</legend>
+          <input type="submit" name="submit" value="Sign Out!">
         </fieldset>
       </form>
 
